--- a/liveness-service/dockerfile
+++ b/liveness-service/dockerfile
@@ -5,16 +5,19 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy package.json and package-lock.json
-COPY liveness-service/package*.json ./
+COPY package.json package-lock.json ./
 
 # Install dependencies
 RUN npm install
 
+# Copy the .env file
+COPY .env /app/.env
+
 # Copy the rest of the application
-COPY liveness-service/ .
+COPY . .
 
 # Expose the port the service runs on
-EXPOSE 3002
+EXPOSE 3001
 
 # Start the application
 CMD ["npm", "start"]
