--- a/liveness-service/package.json
+++ b/liveness-service/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "imepay-liveness",
+  "name": "liveness-service",
   "version": "1.0.0",
+  "description": "service that controls the flow of aws liveness apis",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "Yash Paudel",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@aws-sdk/client-rekognition": "^3.693.0",
-    "@aws-sdk/client-s3": "^3.701.0",
+    "@aws-sdk/client-rekognition": "^3.709.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
   },
   "type": "module"
 }
